--- a/ios/BrainboxApplication/Info.plist
+++ b/ios/BrainboxApplication/Info.plist
@@ -53,6 +53,7 @@
 	</dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>curlz mt.ttf</string>
 		<string>RobotoMono-Bold.ttf</string>
 		<string>RobotoMono-BoldItalic.ttf</string>
 		<string>RobotoMono-Italic.ttf</string>
