--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-google-places')
     compile project(':react-native-maps')
     compile project(':react-native-gesture-handler')
     compile project(':react-native-config')
