--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-config": "^0.11.5",
     "react-native-dash": "0.0.8",
     "react-native-gesture-handler": "^1.0.0-alpha.43",
+    "react-native-google-places": "^2.5.0",
     "react-native-maps": "^0.21.0",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-tab-view": "^0.0.77",
