--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,7 @@ dependencies {
     compile project(':react-native-maps')
     compile project(':react-native-gesture-handler')
     compile project(':react-native-config')
+    compile project(':react-native-paypal')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
