--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-google-places": "^2.5.0",
     "react-native-maps": "^0.21.0",
     "react-native-modal-dropdown": "^0.6.2",
+    "react-native-paypal": "^1.0.3",
     "react-native-tab-view": "^0.0.77",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
